--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,13 @@
     <script type="text/javascript">
       window.SO_LotteryConfig = {
         chainId: 97,
-        contract: '0xbb6e81ae73b8a09c964ecd361e36b573aa332cab'
+        contract: '0xbb6e81ae73b8a09c964ecd361e36b573aa332cab',
+        token: {
+          symbol: 'WEENUS',
+          address: '0x703f112bda4cc6cb9c5fb4b2e6140f6d8374f10b',
+          decimals: 18,
+          title: 'Weenus'
+        }
       }
     </script>
   </head>
