--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,8 @@
           symbol: 'WEENUS',
           address: '0x703f112bda4cc6cb9c5fb4b2e6140f6d8374f10b',
           decimals: 18,
-          title: 'Weenus'
+          title: 'Weenus',
+          price: 10
         }
       }
     </script>
