add support other evms

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       })(window, document, 'script', 'dataLayer', '%REACT_APP_GTAG%')
     </script>
     <script type="text/javascript">
-
+/*
       window.SO_LotteryConfig = {
         chainId: 97,
         rpc: 'https://data-seed-prebsc-1-s1.binance.org:8545/',
@@ -56,22 +56,21 @@
           price: 10
         }
       }
+      */
 
       // Matic
-      /*
       window.SO_LotteryConfig = {
         chainId: 80001,
         rpc: 'https://rpc-mumbai.maticvigil.com',
-        contract: '0x6e9c98a8a481bf038ba7e1d669a0086547dd144e',
+        contract: '0x67AAf7aB10d4273023ddEEad302Bc9a7E7951eC2',
         token: {
-          symbol: 'TST',
-          address: '0x2d7882bedcbfddce29ba99965dd3cdf7fcb10a1e',
+          symbol: 'WEENUS',
+          address: '0x35bE4cA2f4C66861b6B3B9E6F35A7d8FDaD48dea',
           decimals: 18,
-          title: 'Test Token',
+          title: 'Weenus',
           price: 10
         }
       }
-      */
     </script>
   </head>
   <body>
